[ADD]增加zuul网关组件

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>serice-feign</module>
+        <module>service-zuul</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
